finished all of my assignments.

--- a/Assignment4.html
+++ b/Assignment4.html
@@ -6,7 +6,9 @@
 	<head>
 		<title>CSS Combinations 4</title>
 		<style>
-
+   div>p{
+       color:red;
+        }
 		</style>
 	</head>
 	
@@ -17,9 +19,8 @@
 		  <p>This is another paragraph inside a div element.</p>
 		  <span><p>This a paragraph inside a span element, inside a div element.</p></span>
 		</div>
-
 		<p>This is a paragraph, not inside a div element.</p>
 		<p>This is another paragraph, not inside a div element.</p>
-
+    <a href="index.html"> Homepage</a>
 	</body>
 </html>
