--- a/Assignment6.html
+++ b/Assignment6.html
@@ -6,7 +6,9 @@
 	<head>	
 		<title>CSS Combinations 6</title>
 		<style>
-
+    div~p{
+      color:red;
+    }
 		</style>
 	</head>
 	
@@ -20,6 +22,6 @@
 
 		<p>This is a paragraph, not inside a div element.</p>
 		<p>This is another paragraph, not inside a div element.</p>
-
+    <a href="index.html"> Homepage</a>
 	</body>
 </html>
