--- a/Assignment7.html
+++ b/Assignment7.html
@@ -32,7 +32,44 @@
 	<head>
 	  <title>Selectors Exercise</title>
 	  <style>
-	  
+	   body{
+      Background-color:#bdc3c7;
+       }
+     h1{
+       color:#9b59b6;
+     }
+     h2{
+       color:orange;
+     }
+     li{
+       color:darkblue;
+     }
+     p{
+       background-color:yellow;
+     }
+     .hello{
+       Background-color:white;
+     }
+     .special{
+       border-style:2px;
+       color:aqua;
+     }
+     div p{
+       font-side:25px;
+     }
+     third p{
+       Background-color:pink;
+     }
+     second p{
+       border-color:white;
+       border-width:5px;
+     }
+     third{
+       font-size:25px;
+     }
+     a{
+       font-size:30px;
+     }
 	  </style>
 	</head>
 	<body>
@@ -87,6 +124,6 @@
 		</div>
 
 		<p>PARAGRAPH NOT INSIDE A DIV</p>
-
+   <a href="index.html"> Homepage</a>
 	</body>
 </html>
