--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+       <title> css combination assingments</title> 
+       <link rel="stylesheet"
+             type="text/css"
+             href="style.css">
     </head>
     
     <body>
-	
+	 <h1> home page for all of my assignments</h1>
+     <a href="Assignment3.html">Assignment 3</a>
+     <br>
+     <a href="Assignment4.html">Assignment 4</a>
+     <br>
+     <a href="Assignment5.html">Assignment 5</a>
+     <br>
+     <a href="Assignment6.html">Assignment 6</a>
+     <br>
+     <a href="Assignment7.html">Assignment 7</a>
     </body>
 </html>
